--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,23 @@
 .buttons{
   margin-right: 2.5rem;
 }
+/* unvisited link */
+a:link {
+  color: white;
+}
+
+/* visited link */
+a:visited {
+  color: white;
+}
+
+/* mouse over link */
+a:hover {
+  color: white;
+}
+
+/* selected link */
+a:active {
+  color: white;
+}
+
