--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,10 @@ a:active {
   font-size: 1.2em;
   font-weight: bold;
 }
+.user{
+  display: flex !important;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  margin-top: 0.5em;
+}
